# binance-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_api.sh
api/: main.py
scripts/: place_order_direct.py
trading_bot/: __main__.py  cli.py
trading_bot/bot/: __init__.py  ai_bot.py  client.py  exceptions.py  logging_config.py  orders.py  validators.py
